# model/main.go
@@ -313,6 +313,7 @@ func migrateDB() error {
 		&User{},
 		&CustomDomain{},
 		&UserSession{},
+		&OAuthClientSession{},
 		&AuthFlow{},
 		&ExternalIdentityClaim{},
 		&PasskeyCredential{},
@@ -379,6 +380,7 @@ func migrateDBFast() error {
 		{&User{}, "User"},
 		{&CustomDomain{}, "CustomDomain"},
 		{&UserSession{}, "UserSession"},
+		{&OAuthClientSession{}, "OAuthClientSession"},
 		{&AuthFlow{}, "AuthFlow"},
 		{&ExternalIdentityClaim{}, "ExternalIdentityClaim"},
 		{&PasskeyCredential{}, "PasskeyCredential"},
